--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preload" href="../assets/fonts/oswald-v53-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="../assets/fonts/oswald-v53-latin-500.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="../assets/fonts/oswald-v53-latin-600.woff2" as="font" type="font/woff2" crossorigin>
@@ -13,7 +13,7 @@
     <link rel="preload" href="./assets/images/hero-background.webp" as="image" type="image/webp">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.theme.min.css">
-    <script type="module" src="/js/index.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
   <body>
