--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preload" href="../assets/fonts/oswald-v53-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../assets/fonts/oswald-v53-latin-500.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../assets/fonts/oswald-v53-latin-600.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../assets/fonts/oswald-v53-latin-700.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="./assets/icons/company logo4.webp" as="image" type="image/webp">
-    <link rel="preload" href="./assets/images/hero-background.webp" as="image" type="image/webp">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.theme.min.css">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="./assets/icons/company logo4.webp">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="stylesheet" href="css/style.css" onload="this.media='all'; this.onload=null;">
+    <link rel="stylesheet" href="css/glide.css" onload="this.media='all'; this.onload=null;">
+    <script type="module" src="js/glide.min.js" defer></script>
     <script type="module" src="js/index.js" defer></script>
+    <noscript>
+      <link rel="stylesheet" href="/css/local.css">
+    </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
   <body>
@@ -523,7 +526,7 @@
             <path style="fill:#001f3f;" d="M256,477.323c-5.633,0-10.199-4.566-10.199-10.199c0-5.633,4.566-10.199,10.199-10.199 c38.724,0,76.315-11.037,108.706-31.915c4.736-3.052,11.047-1.687,14.098,3.047c3.052,4.734,1.688,11.047-3.046,14.098 C340.064,465.161,298.652,477.323,256,477.323z"></path>
             <path style="fill:#001f3f;" d="M399.811,420.771c-2.733,0-5.459-1.091-7.468-3.249c-3.838-4.122-3.607-10.577,0.515-14.415 c2.223-2.069,4.421-4.21,6.535-6.363c3.947-4.02,10.404-4.079,14.424-0.134c4.02,3.946,4.08,10.403,0.134,14.424 c-2.326,2.37-4.747,4.726-7.192,7.004C404.794,419.867,402.299,420.771,399.811,420.771z"></path>
           </svg>
-alt
+
           <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
             <p id="carousel-instructions" class="visually-hidden">Select the next review by either clicking and dragging, using the arrow keys or using the tab key and pressing enter.</p>
             <div class="glide__track" data-glide-el="track" aria-live="polite">
