--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
-    <link rel="preload" as="style" href="/css/critical.css">
-    <link rel="stylesheet" href="/css/critical.css" media="all">
-    <link rel="preload" as="style" href="/css/style.css">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'; this.onload=null;">
-    <link rel="preload" as="style" href="/css/glide.css">
-    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'; this.onload=null;">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="./assets/icons/company logo4.webp">
+    <link rel="preload" as="style" href="css/critical.css" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="css/style.css" onload="this.media='all'; this.onload=null;">
+    <link rel="stylesheet" href="css/glide.css" onload="this.media='all'; this.onload=null;">
+    <script type="module" src="js/glide.min.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/local.css">
-      <link rel="stylesheet" href="/css/critical.css">
+      <link rel="stylesheet" href="css/local.css">
+      <link rel="stylesheet" href="css/critical.css">
+      <link rel="stylesheet" href="js/glide.min.js">
     </noscript>
-    <script type="module" src="/js/glide.min.js" defer></script>
-    <script type="module" src="/js/index.js" defer></script>
-
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
-
   <body>
     <header id="header">
       <a href="#main" class="skip-to-content">Skip to main content</a>
